# walle-brain

./: pyproject.toml
walle_brain/: __init__.py  cli.py  config.py  llm.py  persona.py
